## NegotiationGame.gd
## è°ˆåˆ¤æ¸¸æˆä¸»æ§è„šæœ¬ - å®Œæ•´æ¸¸æˆå¾ªç¯
##
## çŠ¶æ€æœºé©±åŠ¨çš„å›åˆåˆ¶è°ˆåˆ¤ï¼š
## PLAYER_TURN â†’ AI_EVALUATE â†’ (AI_TURN) â†’ PLAYER_EVALUATE â†’ å¾ªç¯
##
## æ‰€æœ‰å†³ç­–ä¿¡æ¯é€šè¿‡ print() è¾“å‡ºï¼Œä¾›è°ƒè¯•å’Œç†è§£ã€‚
class_name NegotiationGame
extends Control


## ===== è„šæœ¬å¼•ç”¨ =====

const NegotiationAgentScript: GDScript = preload("res://scenes/negotiation_ai/NegotiationAgent.gd")
const GapLAIScript: GDScript = preload("res://scenes/gap_l_mvp/scripts/GapLAI.gd")
const CardLibraryScript: GDScript = preload("res://scenes/negotiation/scripts/NegotiationCardLibrary.gd")
const ProposalSynthesizerScript: GDScript = preload("res://scenes/negotiation/scripts/ProposalSynthesizer.gd")
const DraggableCardScene: PackedScene = preload("res://scenes/negotiation/scenes/DraggableCard.tscn")
const IssueCardDataScript: GDScript = preload("res://scenes/negotiation/resources/IssueCardData.gd")
const ActionCardDataScript: GDScript = preload("res://scenes/negotiation/resources/ActionCardData.gd")
const ProposalCardDataScript: GDScript = preload("res://scenes/negotiation/resources/ProposalCardData.gd")


## ===== æ¸¸æˆçŠ¶æ€æšä¸¾ =====

enum GameState {
	INIT, ## åˆå§‹åŒ–
	PLAYER_TURN, ## ç©å®¶å›åˆï¼šé€‰ç‰Œã€åˆæˆã€æäº¤
	AI_EVALUATE, ## AI è¯„ä¼°ç©å®¶ææ¡ˆ
	AI_TURN, ## AI å›åˆï¼šç”Ÿæˆåææ¡ˆ
	PLAYER_EVALUATE, ## ç©å®¶è¯„ä¼° AI åææ¡ˆ
	ROUND_END, ## å›åˆç»“æŸï¼Œå‡†å¤‡ä¸‹ä¸€è½®
}


## ===== èŠ‚ç‚¹å¼•ç”¨ =====

# çŠ¶æ€æ˜¾ç¤º
@onready var status_label: Label = $MainVBox/StatusBar/StatusLabel
@onready var round_label: Label = $MainVBox/StatusBar/RoundLabel
@onready var emotion_label: Label = $MainVBox/StatusBar/EmotionLabel

# å¡ç‰ŒåŒºåŸŸ
@onready var proposal_container: HBoxContainer = $MainVBox/ProposalSection/ProposalPanel/ProposalScroll/ProposalContainer
@onready var issue_container: HBoxContainer = $MainVBox/IssueSection/IssuePanel/IssueScroll/IssueContainer
@onready var hand_container: HBoxContainer = $MainVBox/HandSection/HandPanel/HandScroll/HandContainer

# æŒ‰é’®
@onready var submit_button: Button = $MainVBox/ButtonBar/SubmitButton
@onready var reset_button: Button = $MainVBox/ButtonBar/ResetButton
@onready var next_round_button: Button = $MainVBox/ButtonBar/NextRoundButton


## ===== æ ¸å¿ƒç»„ä»¶ =====

## ç‰©ç†å¼•æ“ Agent (4å±‚ç®¡çº¿)
var agent: RefCounted = null

## GapLAI (ç”¨äº AI åˆæˆè¯„ä¼°)
var gap_l_ai: RefCounted = null


## ===== æ¸¸æˆçŠ¶æ€ =====

## å½“å‰æ¸¸æˆçŠ¶æ€
var current_state: GameState = GameState.INIT

## å½“å‰å›åˆæ•°
var current_round: int = 0

## å½“å‰ææ¡ˆåŒºçš„å¡ç‰Œ
var active_proposals: Array[Resource] = []

## æ¡Œé¢è®®é¢˜å¡
var table_issues: Array[Resource] = []

## ç©å®¶æ‰‹ç‰Œ (åŠ¨ä½œå¡)
var player_hand: Array[Resource] = []

## AI æ‰‹ç‰Œ (åŠ¨ä½œå¡ï¼Œå¯é‡å¤ä½¿ç”¨)
var ai_action_hand: Array[Resource] = []

## å½“å‰ææ¡ˆå‘é‡ (ç”¨äºç‰©ç†å¼•æ“è¯„ä¼°)
var current_offer: Vector2 = Vector2(50, 50) # (R, P)

## AI æœ€åçš„åææ¡ˆ
var ai_counter_proposal: Resource = null

## å½“å‰é€‰ä¸­çš„è®®é¢˜å¡ (ä¸¤æ®µå¼é€‰æ‹©)
var selected_issue: Resource = null

## è®®é¢˜ -> UI å¡ç‰Œçš„æ˜ å°„ (ç”¨äºé«˜äº®æ˜¾ç¤º)
var issue_card_map: Dictionary = {}

## åŠ¨ä½œ -> UI å¡ç‰Œçš„æ˜ å°„
var action_card_map: Dictionary = {}


## ===== ç”Ÿå‘½å‘¨æœŸ =====

func _ready() -> void:
	_print_header("æ¸¸æˆåˆå§‹åŒ–")
	
	_init_components()
	_init_cards()
	_connect_signals()
	_spawn_cards()
	
	# å¼€å§‹æ¸¸æˆ
	_change_state(GameState.PLAYER_TURN)
	
	print("[Game] åˆå§‹åŒ–å®Œæˆ")
	print("[Game] æ¡Œé¢è®®é¢˜: %d, ç©å®¶æ‰‹ç‰Œ: %d, AIåŠ¨ä½œ: %d" % [
		table_issues.size(), player_hand.size(), ai_action_hand.size()
	])


## ===== åˆå§‹åŒ– =====

func _init_components() -> void:
	# åˆå§‹åŒ–ç‰©ç†å¼•æ“ Agent
	agent = NegotiationAgentScript.new()
	agent.configure_personality(Vector2(80.0, 100.0), 1.0, 40.0) # Target=(R=80, P=100)
	print("[Game] Agent åˆå§‹åŒ–: Target=(80, 100), Greed=1.0, Threshold=40")
	
	# åˆå§‹åŒ– GapLAI
	gap_l_ai = GapLAIScript.new()
	gap_l_ai.strategy_factor = -0.3 # ç•¥å¾®å«‰å¦’å‹
	gap_l_ai.base_batna = 10.0
	print("[Game] GapLAI åˆå§‹åŒ–: SF=%.2f, BATNA=%.2f" % [
		gap_l_ai.strategy_factor, gap_l_ai.base_batna
	])


func _init_cards() -> void:
	# åŠ è½½æ¡Œé¢è®®é¢˜å¡ (åŒæ–¹å…±ç”¨)
	var issue_paths: Array[String] = [
		"res://scenes/negotiation/resources/ai_cards/US_AdvancedChips.tres",
		"res://scenes/negotiation/resources/ai_cards/US_SoybeanCorn.tres",
		"res://scenes/negotiation/resources/ai_cards/US_CloudData.tres",
	]
	
	for path: String in issue_paths:
		var issue: Resource = load(path)
		if issue != null:
			table_issues.append(issue)
	
	# ç©å®¶æ‰‹ç‰Œï¼šä» CardLibrary è·å–
	player_hand = CardLibraryScript.get_all_cards().duplicate()
	
	# AI æ‰‹ç‰Œï¼šç¾æ–¹ä¸“å±åŠ¨ä½œå¡
	var ai_action_paths: Array[String] = [
		"res://scenes/negotiation/resources/ai_cards/US_EntityListBan.tres",
		"res://scenes/negotiation/resources/ai_cards/US_Section301.tres",
		"res://scenes/negotiation/resources/ai_cards/US_TechWaiver.tres",
	]
	
	for path: String in ai_action_paths:
		var action: Resource = load(path)
		if action != null:
			ai_action_hand.append(action)


func _connect_signals() -> void:
	submit_button.pressed.connect(_on_submit_pressed)
	reset_button.pressed.connect(_on_reset_pressed)
	next_round_button.pressed.connect(_on_next_round_pressed)


func _spawn_cards() -> void:
	issue_card_map.clear()
	action_card_map.clear()
	
	# ç”Ÿæˆè®®é¢˜å¡ UI
	for issue: Resource in table_issues:
		var card_ui: Control = DraggableCardScene.instantiate()
		issue_container.add_child(card_ui)
		
		# åˆ›å»ºæ˜¾ç¤ºç”¨çš„ææ¡ˆå£³
		var display: Resource = ProposalCardDataScript.new()
		display.display_name = "ğŸ“‹ " + issue.issue_name
		display.stance = ActionCardDataScript.Stance.NEUTRAL
		display.source_issue = issue
		
		card_ui.set_as_proposal(display)
		card_ui.custom_minimum_size = Vector2(90, 120)
		# ä½¿ç”¨åŒå‡»æ¥é€‰ä¸­è®®é¢˜ï¼ˆä¸¤æ®µå¼ç¬¬ä¸€æ­¥ï¼‰
		card_ui.card_double_clicked.connect(_on_issue_clicked.bind(issue))
		# ä¿å­˜æ˜ å°„
		issue_card_map[issue] = card_ui
	
	# ç”Ÿæˆç©å®¶æ‰‹ç‰Œ UI
	for action: Resource in player_hand:
		var card_ui: Control = DraggableCardScene.instantiate()
		hand_container.add_child(card_ui)
		card_ui.set_as_action(action)
		card_ui.custom_minimum_size = Vector2(80, 110)
		# ä½¿ç”¨åŒå‡»æ¥åº”ç”¨åŠ¨ä½œï¼ˆä¸¤æ®µå¼ç¬¬äºŒæ­¥ï¼‰
		card_ui.card_double_clicked.connect(_on_action_clicked.bind(action))
		# ä¿å­˜æ˜ å°„
		action_card_map[action] = card_ui


## ===== çŠ¶æ€æœº =====

func _change_state(new_state: GameState) -> void:
	var old_state: GameState = current_state
	current_state = new_state
	
	_print_header("çŠ¶æ€å˜æ›´: %s â†’ %s" % [
		GameState.keys()[old_state], GameState.keys()[new_state]
	])
	
	# æ›´æ–° UI
	_update_status_display()
	
	# çŠ¶æ€å…¥å£é€»è¾‘
	match new_state:
		GameState.PLAYER_TURN:
			_enter_player_turn()
		GameState.AI_EVALUATE:
			_enter_ai_evaluate()
		GameState.AI_TURN:
			_enter_ai_turn()
		GameState.PLAYER_EVALUATE:
			_enter_player_evaluate()
		GameState.ROUND_END:
			_enter_round_end()


func _enter_player_turn() -> void:
	current_round += 1
	print("[Round %d] ç©å®¶å›åˆå¼€å§‹" % current_round)
	print("[Game] å½“å‰ææ¡ˆæ•°: %d" % active_proposals.size())
	
	# å¯ç”¨ç©å®¶æ“ä½œ
	submit_button.disabled = false
	reset_button.disabled = false
	next_round_button.disabled = true


func _enter_ai_evaluate() -> void:
	print("[Round %d] AI è¯„ä¼°ä¸­..." % current_round)
	
	# ç¦ç”¨ç©å®¶æ“ä½œ
	submit_button.disabled = true
	reset_button.disabled = true
	
	# å»¶è¿Ÿæ‰§è¡Œ AI è¯„ä¼° (æ¨¡æ‹Ÿæ€è€ƒæ—¶é—´)
	await get_tree().create_timer(0.5).timeout
	_ai_evaluate_proposal()


func _enter_ai_turn() -> void:
	print("[Round %d] AI å›åˆï¼šç”Ÿæˆåææ¡ˆ" % current_round)
	
	# å»¶è¿Ÿæ‰§è¡Œ AI å‡ºæ‹›
	await get_tree().create_timer(0.5).timeout
	_ai_generate_counter()


func _enter_player_evaluate() -> void:
	print("[Round %d] ç©å®¶è¯„ä¼° AI åææ¡ˆ" % current_round)
	
	# å¯ç”¨æŒ‰é’®
	submit_button.disabled = false
	submit_button.text = "âœ… æ¥å—åææ¡ˆ"
	reset_button.disabled = false
	reset_button.text = "âŒ æ‹’ç»/ä¿®æ”¹"
	next_round_button.disabled = false


func _enter_round_end() -> void:
	print("[Round %d] å›åˆç»“æŸ" % current_round)
	
	# å¢åŠ å‹åŠ›
	agent.engine.update_pressure(1.0)
	print("[Game] å‹åŠ›å¢é•¿: %.2f / %.2f" % [
		agent.engine.current_pressure, agent.engine.max_pressure
	])
	
	# è‡ªåŠ¨è¿›å…¥ä¸‹ä¸€è½®
	await get_tree().create_timer(0.3).timeout
	_change_state(GameState.PLAYER_TURN)


## ===== AI å†³ç­–é€»è¾‘ =====

func _ai_evaluate_proposal() -> void:
	if active_proposals.is_empty():
		print("[AI] ç©å®¶æœªæäº¤ä»»ä½•ææ¡ˆï¼Œè·³è¿‡è¯„ä¼°")
		_change_state(GameState.ROUND_END)
		return
	
	# è®¡ç®—ææ¡ˆå‘é‡
	var total_p: float = 0.0
	var total_r: float = 0.0
	
	print("[AI] è¯„ä¼°ç©å®¶ææ¡ˆ (%d å¼ ):" % active_proposals.size())
	for proposal: Resource in active_proposals:
		var g_val: float = proposal.get_g_value()
		var p_val: float = proposal.get_p_value()
		total_p += g_val
		total_r += p_val
		print("  - %s: G=%.2f, P=%.2f" % [proposal.display_name, g_val, p_val])
	
	# æ›´æ–°ææ¡ˆå‘é‡
	current_offer = Vector2(50 + total_r, 50 + total_p) # åŸºå‡† + å¢é‡
	print("[AI] ææ¡ˆå‘é‡: Offer=(R=%.1f, P=%.1f)" % [current_offer.x, current_offer.y])
	
	# è°ƒç”¨ç‰©ç†å¼•æ“è¯„ä¼°
	var result: Dictionary = agent.evaluate_vector(current_offer)
	
	print("[AI] ç‰©ç†å¼•æ“è¯„ä¼°ç»“æœ:")
	print("  - Target: (%.1f, %.1f)" % [agent.engine.target_point.x, agent.engine.target_point.y])
	print("  - ä¿®æ­£åŠ›å¤§å°: %.2f" % result["physics"]["force_magnitude"])
	print("  - å‹åŠ›æ°´å¹³: %.2f, å¯æ¥å—: %s" % [result["physics"]["pressure_level"], result["physics"]["is_acceptable"]])
	print("  - å†³ç­–: %s" % result["intent"])
	print("  - ç†ç”±: %s" % result["response_text"])
	
	# æ ¹æ®å†³ç­–åˆ†æ”¯
	if result["accepted"]:
		_print_header("ğŸ‰ AI æ¥å—ææ¡ˆ!")
		print("[Game] è°ˆåˆ¤æˆåŠŸï¼Œè¿›å…¥æ–°å›åˆ")
		_clear_proposals()
		agent.engine.reset_pressure()
		_change_state(GameState.ROUND_END)
	else:
		print("[AI] æ‹’ç»ææ¡ˆï¼Œå‡†å¤‡åææ¡ˆ...")
		_change_state(GameState.AI_TURN)


func _ai_generate_counter() -> void:
	# ä½¿ç”¨ GapLAI å¯»æ‰¾æœ€ä½³åˆæˆ
	var best_move: Dictionary = gap_l_ai.find_best_synthesis_move(
		table_issues,
		ai_action_hand,
		0.0,
		{"round": current_round}
	)
	
	if best_move["proposal"] != null:
		ai_counter_proposal = best_move["proposal"]
		
		print("[AI] ç”Ÿæˆåææ¡ˆ:")
		print("  - è®®é¢˜: %s" % best_move["issue"].issue_name)
		print("  - åŠ¨ä½œ: %s" % best_move["action"].action_name)
		print("  - åˆæˆ: %s" % ai_counter_proposal.display_name)
		print("  - è¯„åˆ†: %.2f" % best_move["score_gain"])
		print("  - ç†ç”±: %s" % best_move["reason"])
		
		# æ˜¾ç¤ºå¯¹æ¯”ï¼šç©å®¶ææ¡ˆ(æ·¡åŒ–) + AIåææ¡ˆ(é«˜äº®)
		_refresh_proposal_display_with_counter()
		
		# è®¡ç®— AI ææ¡ˆçš„ç‰©ç†æ•ˆæœ
		var action: Resource = best_move["action"]
		current_offer.x += action.impact_relationship
		current_offer.y += action.impact_profit
		
		print("[AI] åææ¡ˆç‰©ç†æ•ˆæœ: R%+.1f, P%+.1f â†’ Offer=(%.1f, %.1f)" % [
			action.impact_relationship, action.impact_profit,
			current_offer.x, current_offer.y
		])
		
		# æ›´æ–°çŠ¶æ€æ æ˜¾ç¤º AI åææ¡ˆè¯¦æƒ…
		status_label.text = "ğŸ¤– AI åææ¡ˆ: %s (è®®é¢˜: %s + åŠ¨ä½œ: %s)" % [
			ai_counter_proposal.display_name,
			best_move["issue"].issue_name,
			best_move["action"].action_name
		]
		
		_change_state(GameState.PLAYER_EVALUATE)
	else:
		print("[AI] æ— æ³•ç”Ÿæˆæœ‰æ•ˆåææ¡ˆï¼Œç»´æŒç°çŠ¶")
		status_label.text = "ğŸ¤” AI æ— æ³•æå‡ºæ›´ä¼˜æ–¹æ¡ˆ..."
		_change_state(GameState.ROUND_END)


## ===== ç©å®¶äº¤äº’ (ä¸¤æ®µå¼é€‰æ‹©) =====

## ç¬¬ä¸€æ­¥ï¼šåŒå‡»è®®é¢˜å¡è¿›è¡Œé€‰ä¸­
func _on_issue_clicked(_card_ui: Control, issue: Resource) -> void:
	if current_state != GameState.PLAYER_TURN:
		print("[Game] éç©å®¶å›åˆï¼Œå¿½ç•¥æ“ä½œ")
		return
	
	# å¦‚æœç‚¹å‡»çš„æ˜¯å·²é€‰ä¸­çš„è®®é¢˜ï¼Œå–æ¶ˆé€‰ä¸­
	if selected_issue == issue:
		_deselect_issue()
		print("[Player] å–æ¶ˆé€‰ä¸­è®®é¢˜: %s" % issue.issue_name)
		status_label.text = "ğŸ® ä½ çš„å›åˆ - åŒå‡»é€‰æ‹©è®®é¢˜"
		return
	
	# é€‰ä¸­æ–°è®®é¢˜
	_select_issue(issue)
	print("[Player] é€‰ä¸­è®®é¢˜: %s â†’ è¯·åŒå‡»ä¸€å¼ åŠ¨ä½œå¡åˆæˆææ¡ˆ" % issue.issue_name)
	status_label.text = "ğŸ¯ å·²é€‰ä¸­ [%s] - åŒå‡»åŠ¨ä½œå¡åˆæˆææ¡ˆ" % issue.issue_name


## ç¬¬äºŒæ­¥ï¼šåŒå‡»åŠ¨ä½œå¡è¿›è¡Œåˆæˆ
func _on_action_clicked(_card_ui: Control, action: Resource) -> void:
	if current_state != GameState.PLAYER_TURN:
		print("[Game] éç©å®¶å›åˆï¼Œå¿½ç•¥æ“ä½œ")
		return
	
	# æ£€æŸ¥æ˜¯å¦å·²é€‰ä¸­è®®é¢˜
	if selected_issue == null:
		print("[Game] âš ï¸ è¯·å…ˆåŒå‡»é€‰æ‹©ä¸€ä¸ªè®®é¢˜å¡ï¼")
		status_label.text = "âš ï¸ è¯·å…ˆåŒå‡»é€‰æ‹©ä¸€ä¸ªè®®é¢˜å¡ï¼"
		return
	
	# ä½¿ç”¨é€‰ä¸­çš„è®®é¢˜è¿›è¡Œåˆæˆ
	var issue: Resource = selected_issue
	
	if not ProposalSynthesizerScript.can_craft(issue, action):
		print("[Game] æ— æ³•åˆæˆ: %s + %s" % [issue.issue_name, action.action_name])
		status_label.text = "âŒ æ— æ³•åˆæˆ %s + %s" % [issue.issue_name, action.action_name]
		return
	
	# åˆæˆææ¡ˆ
	var proposal: Resource = ProposalSynthesizerScript.craft(issue, action)
	active_proposals.append(proposal)
	_refresh_proposal_display()
	
	print("[Player] åˆæˆææ¡ˆ: %s + %s = %s" % [
		issue.issue_name, action.action_name, proposal.display_name
	])
	print("[Player] ææ¡ˆæ•ˆæœ: G=%.2f, P=%.2f" % [
		proposal.get_g_value(), proposal.get_p_value()
	])
	
	# åˆæˆåå–æ¶ˆé€‰ä¸­
	_deselect_issue()
	status_label.text = "âœ… å·²åˆæˆ [%s] - ç»§ç»­é€‰æ‹©æˆ–æäº¤" % proposal.display_name


## ===== é€‰ä¸­çŠ¶æ€ç®¡ç† =====

## é€‰ä¸­è®®é¢˜å¡
func _select_issue(issue: Resource) -> void:
	# å…ˆå–æ¶ˆä¹‹å‰çš„é€‰ä¸­
	if selected_issue != null:
		_deselect_issue()
	
	selected_issue = issue
	
	# é«˜äº®æ˜¾ç¤º
	var card_ui: Control = issue_card_map.get(issue)
	if card_ui:
		_set_card_highlight(card_ui, true)


## å–æ¶ˆé€‰ä¸­
func _deselect_issue() -> void:
	if selected_issue == null:
		return
	
	# ç§»é™¤é«˜äº®
	var card_ui: Control = issue_card_map.get(selected_issue)
	if card_ui:
		_set_card_highlight(card_ui, false)
	
	selected_issue = null


## è®¾ç½®å¡ç‰Œé«˜äº®æ•ˆæœ
func _set_card_highlight(card_ui: Control, highlighted: bool) -> void:
	if highlighted:
		# é‡‘è‰²è¾¹æ¡† + è½»å¾®æ”¾å¤§
		card_ui.modulate = Color(1.2, 1.1, 0.8)
		card_ui.scale = Vector2(1.05, 1.05)
	else:
		# æ¢å¤æ­£å¸¸
		card_ui.modulate = Color.WHITE
		card_ui.scale = Vector2.ONE


func _on_submit_pressed() -> void:
	match current_state:
		GameState.PLAYER_TURN:
			if active_proposals.is_empty():
				print("[Game] è¯·å…ˆåˆæˆè‡³å°‘ä¸€ä¸ªææ¡ˆ")
				return
			print("[Player] æäº¤ææ¡ˆï¼Œå…± %d å¼ " % active_proposals.size())
			_change_state(GameState.AI_EVALUATE)
		
		GameState.PLAYER_EVALUATE:
			# ç©å®¶æ¥å— AI åææ¡ˆ
			_print_header("ğŸ¤ ç©å®¶æ¥å— AI åææ¡ˆ")
			_clear_proposals()
			agent.engine.reset_pressure()
			_change_state(GameState.ROUND_END)


func _on_reset_pressed() -> void:
	match current_state:
		GameState.PLAYER_TURN:
			_clear_proposals()
			_deselect_issue()
			current_offer = Vector2(50, 50)
			print("[Player] é‡ç½®ææ¡ˆåŒº")
			status_label.text = "ğŸ® ä½ çš„å›åˆ - åŒå‡»é€‰æ‹©è®®é¢˜"
		
		GameState.PLAYER_EVALUATE:
			# ç©å®¶æ‹’ç»åææ¡ˆï¼Œä¿®æ”¹è‡ªå·±çš„ææ¡ˆ
			print("[Player] æ‹’ç» AI åææ¡ˆï¼Œé‡æ–°ç¼–è¾‘")
			_clear_proposals()
			submit_button.text = "ğŸ¤ æäº¤ææ¡ˆ"
			reset_button.text = "ğŸ”„ é‡ç½®"
			_change_state(GameState.PLAYER_TURN)


func _on_next_round_pressed() -> void:
	_change_state(GameState.ROUND_END)


## ===== ææ¡ˆç®¡ç† =====

func _clear_proposals() -> void:
	active_proposals.clear()
	ai_counter_proposal = null
	_refresh_proposal_display()


func _refresh_proposal_display() -> void:
	# æ¸…ç©ºææ¡ˆåŒº UI
	for child: Node in proposal_container.get_children():
		child.queue_free()
	
	# é‡æ–°ç”Ÿæˆ
	for proposal: Resource in active_proposals:
		var card_ui: Control = DraggableCardScene.instantiate()
		proposal_container.add_child(card_ui)
		card_ui.set_as_proposal(proposal)
		card_ui.custom_minimum_size = Vector2(85, 115)
		card_ui.card_double_clicked.connect(_on_proposal_double_clicked.bind(proposal))


## æ˜¾ç¤ºå¯¹æ¯”æ¨¡å¼ï¼šç©å®¶ææ¡ˆ(æ·¡åŒ–) + AIåææ¡ˆ(é«˜äº®)
func _refresh_proposal_display_with_counter() -> void:
	# æ¸…ç©ºææ¡ˆåŒº UI
	for child: Node in proposal_container.get_children():
		child.queue_free()
	
	# 1. æ˜¾ç¤ºç©å®¶åŸææ¡ˆ (æ·¡åŒ– + åˆ é™¤çº¿æ•ˆæœ)
	if not active_proposals.is_empty():
		# æ·»åŠ åˆ†éš”æ ‡ç­¾
		var player_label: Label = Label.new()
		player_label.text = "âŒ ä½ çš„ææ¡ˆ (å·²æ‹’ç»)"
		player_label.add_theme_color_override("font_color", Color(0.6, 0.4, 0.4))
		player_label.add_theme_font_size_override("font_size", 12)
		proposal_container.add_child(player_label)
		
		for proposal: Resource in active_proposals:
			var card_ui: Control = DraggableCardScene.instantiate()
			proposal_container.add_child(card_ui)
			card_ui.set_as_proposal(proposal)
			card_ui.custom_minimum_size = Vector2(75, 100)
			# æ·¡åŒ–æ•ˆæœ
			card_ui.modulate = Color(0.5, 0.5, 0.5, 0.7)
	
	# 2. æ·»åŠ ç®­å¤´åˆ†éš”ç¬¦
	var arrow_label: Label = Label.new()
	arrow_label.text = "  âœ  "
	arrow_label.add_theme_color_override("font_color", Color(1.0, 0.8, 0.3))
	arrow_label.add_theme_font_size_override("font_size", 24)
	proposal_container.add_child(arrow_label)
	
	# 3. æ˜¾ç¤º AI åææ¡ˆ (é«˜äº® + çº¢è‰²è¾¹æ¡†)
	if ai_counter_proposal != null:
		# æ·»åŠ åˆ†éš”æ ‡ç­¾
		var ai_label: Label = Label.new()
		ai_label.text = "ğŸ¤– AI åææ¡ˆ"
		ai_label.add_theme_color_override("font_color", Color(1.0, 0.6, 0.3))
		ai_label.add_theme_font_size_override("font_size", 12)
		proposal_container.add_child(ai_label)
		
		var card_ui: Control = DraggableCardScene.instantiate()
		proposal_container.add_child(card_ui)
		card_ui.set_as_proposal(ai_counter_proposal)
		card_ui.custom_minimum_size = Vector2(95, 125)
		# é«˜äº®æ•ˆæœ (é‡‘æ©™è‰²)
		card_ui.modulate = Color(1.3, 1.0, 0.7)
		card_ui.scale = Vector2(1.08, 1.08)


func _on_proposal_double_clicked(_card_ui: Control, proposal: Resource) -> void:
	if current_state != GameState.PLAYER_TURN:
		return
	
	# åˆ†è§£ææ¡ˆ
	active_proposals.erase(proposal)
	_refresh_proposal_display()
	print("[Player] ç§»é™¤ææ¡ˆ: %s" % proposal.display_name)


## ===== UI æ›´æ–° =====

func _update_status_display() -> void:
	round_label.text = "å›åˆ #%d" % current_round
	status_label.text = _get_state_display_text()
	emotion_label.text = gap_l_ai.get_sentiment_emoji() + " " + gap_l_ai.get_sentiment_label()


func _get_state_display_text() -> String:
	match current_state:
		GameState.INIT:
			return "åˆå§‹åŒ–ä¸­..."
		GameState.PLAYER_TURN:
			return "ğŸ® ä½ çš„å›åˆ - é€‰æ‹©è®®é¢˜å’ŒåŠ¨ä½œï¼Œåˆæˆææ¡ˆ"
		GameState.AI_EVALUATE:
			return "ğŸ¤” AI è¯„ä¼°ä¸­..."
		GameState.AI_TURN:
			return "ğŸ¤– AI å›åˆ..."
		GameState.PLAYER_EVALUATE:
			return "ğŸ“‹ AI æå‡ºåææ¡ˆ - æ¥å—æˆ–æ‹’ç»?"
		GameState.ROUND_END:
			return "â³ å›åˆç»“æŸ..."
		_:
			return ""


## ===== è¾…åŠ©å‡½æ•° =====

func _print_header(text: String) -> void:
	print("")
	print("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	print("[Round %d] %s" % [current_round, text])
	print("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
